--- a/style.css
+++ b/style.css
@@ -1,10 +1,27 @@
 .Calc{
     align-items: center;
-    min-width: 700px;
-    border: 2px;
-    border-color: black;
+    min-width: 70px;
+    max-width: 400px;
+    border: 5px;
+    border-style: solid;
+    border-color: rgb(48, 120, 187);
     border-radius: 2%;
+}
+.display{
+    position:static ;
+    align-items: center;
+    padding: 2%;
 }
 .vision{
     min-width: 30px;
+    
+}
+.number{
+    align-items: center;
+}
+.button-num{
+    text-align: center;
+    font-size: 20px;
+    padding: 1%;
+
 }
